--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,14 +1,23 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,preferred,auto,auto
 
+# Yippe! Nvidia!
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+env = WLR_NO_HARDWARE_CURSORS,1
 
+# General
 bind = SUPER SHIFT, Q, killactive, 
 bind = SUPER SHIFT CTRL, M, exit, 
 
+# Launch apps
 bind = SUPER, A, exec, alacritty
 bind = SUPER, S, exec, firefox
 bind = SUPER, D, exec, wofi --show drun
 
+# Open this config file
 bind = SUPER, slash, exec, code ~/.config/hypr/hyprland.conf
 
 # Move focus with mainMod + arrow keys
