Fix firefox slow startup

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,8 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,preferred,auto,auto
+monitor = , preferred, auto, auto
+
+# Fix slow app startup (particually firefox at the moment)
+exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Yippe! Nvidia!
 env = LIBVA_DRIVER_NAME,nvidia
@@ -15,10 +18,15 @@ bind = SUPER SHIFT CTRL, M, exit,
 # Launch apps
 bind = SUPER, A, exec, alacritty
 bind = SUPER, S, exec, firefox
-bind = SUPER, D, exec, wofi --show drun
+bind = SUPER, D, exec, pkill wofi || wofi --show drun
+bind = , Print, exec, grimblast copy area
 
 # Open this config file
 bind = SUPER, slash, exec, code ~/.config/hypr/hyprland.conf
+
+input {
+    force_no_accel = true
+}
 
 # Move focus with mainMod + arrow keys
 bind = SUPER, left, movefocus, l
