Add pulsemixer keybind

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ bind = SUPER SHIFT CTRL, M, exit,
 bind = SUPER, A, exec, alacritty
 bind = SUPER, S, exec, firefox
 bind = SUPER, D, exec, pkill wofi || wofi --show drun
+bind = SUPER, W, exec, alacritty -e pulsemixer
 bind = , Print, exec, grimblast copy area
 
 # Open this config file
