--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,6 +11,9 @@ env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 
+# Wallpaper
+exec-once = hyprpaper
+
 # General
 bind = SUPER SHIFT, Q, killactive, 
 bind = SUPER SHIFT CTRL, M, exit, 
@@ -18,12 +21,12 @@ bind = SUPER SHIFT CTRL, M, exit,
 # Launch apps
 bind = SUPER, A, exec, alacritty
 bind = SUPER, S, exec, firefox
-bind = SUPER, D, exec, pkill wofi || wofi --show drun
+bind = SUPER, D, exec, pkill wofi || wofi -G --show drun
 bind = SUPER, W, exec, alacritty -e pulsemixer
 bind = , Print, exec, grimblast copy area
 
 # Open this config file
-bind = SUPER, slash, exec, code ~/.config/hypr/hyprland.conf
+bind = SUPER, slash, exec, GIT_DIR=~/.dotfiles GIT_WORK_TREE=$HOME code ~
 
 input {
     force_no_accel = true
