--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -32,6 +32,27 @@ input {
     force_no_accel = true
 }
 
+general {
+    gaps_in = 5
+    gaps_out = 20
+    border_size = 3
+    col.active_border = rgb(5BCEFA) rgb(F5A9B8) rgb(F5A9B8) rgb(5BCEFA) 45deg
+    col.inactive_border = rgba(595959aa)
+}
+
+decoration {
+    rounding = 10
+    blur = true
+    blur_size = 3
+    blur_passes = 1
+    blur_new_optimizations = true
+
+    drop_shadow = true
+    shadow_range = 4
+    shadow_render_power = 3
+    col.shadow = rgba(1a1a1aee)
+}
+
 # Move focus with mainMod + arrow keys
 bind = SUPER, left, movefocus, l
 bind = SUPER, right, movefocus, r
