More window decor

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -42,6 +42,9 @@ general {
 
 decoration {
     rounding = 10
+
+    inactive_opacity = 0.9
+
     blur = true
     blur_size = 3
     blur_passes = 1
@@ -51,6 +54,10 @@ decoration {
     shadow_range = 4
     shadow_render_power = 3
     col.shadow = rgba(1a1a1aee)
+}
+
+animations {
+    enabled = false
 }
 
 # Move focus with mainMod + arrow keys
