--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -23,10 +23,13 @@ bind = SUPER, A, exec, alacritty
 bind = SUPER, S, exec, firefox
 bind = SUPER, D, exec, pkill wofi || wofi -G --show drun
 bind = SUPER, W, exec, alacritty -e pulsemixer
-bind = , Print, exec, grimblast copy area
+bind = , Print, exec, hyprshade off && grimblast copy area
+bind = , Scroll_Lock, exec, hyprshade on toneshift
 
 # Open this config file
 bind = SUPER, slash, exec, GIT_DIR=~/.dotfiles GIT_WORK_TREE=$HOME code ~
+
+exec = hyprshade on toneshift
 
 input {
     force_no_accel = true
