--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,8 +11,9 @@ env = GBM_BACKEND,nvidia-drm
 env = __GLX_VENDOR_LIBRARY_NAME,nvidia
 env = WLR_NO_HARDWARE_CURSORS,1
 
-# Wallpaper
+# Wallpaper & Shaders
 exec-once = hyprpaper
+exec = hyprshade on toneshift
 
 # General
 bind = SUPER SHIFT, Q, killactive, 
@@ -26,10 +27,14 @@ bind = SUPER, W, exec, alacritty -e pulsemixer
 bind = , Print, exec, hyprshade off && grimblast copy area
 bind = , Scroll_Lock, exec, hyprshade on toneshift
 
-# Open this config file
-bind = SUPER, slash, exec, GIT_DIR=~/.dotfiles GIT_WORK_TREE=$HOME code ~
+# Pulseaudio
+bind = , XF86AudioRaiseVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ +2%
+bind = , XF86AudioLowerVolume, exec, pactl set-sink-volume @DEFAULT_SINK@ -2%
+bind = , XF86AudioMute, exec, pactl set-sink-mute @DEFAULT_SINK@ toggle
+bind = , XF86AudioMicMute, exec, pactl set-source-mute @DEFAULT_SOURCE@ toggle
 
-exec = hyprshade on toneshift
+# Open this config file (make sure to close vscode after or all git repos you open will be fucked)
+bind = SUPER, slash, exec, GIT_DIR=~/.dotfiles GIT_WORK_TREE=$HOME code ~
 
 input {
     force_no_accel = true
