--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -22,7 +22,8 @@ bind = SUPER SHIFT CTRL, M, exit,
 # Launch apps
 bind = SUPER, A, exec, alacritty
 bind = SUPER, S, exec, firefox
-bind = SUPER, D, exec, pkill wofi || wofi -G --show drun
+bind = SUPER, D, exec, code
+bindr = SUPER, Super_L, exec, pkill wofi || wofi -G --show drun
 bind = SUPER, W, exec, alacritty -e pulsemixer
 bind = , Print, exec, hyprshade off && grimblast copy area
 bind = , Scroll_Lock, exec, hyprshade on toneshift
