--- a/.config/discord/settings.json
+++ b/.config/discord/settings.json
@@ -1,4 +1,14 @@
 {
-    "SKIP_HOST_UPDATE": true,
-    "DANGEROUS_ENABLE_DEVTOOLS_ONLY_ENABLE_IF_YOU_KNOW_WHAT_YOURE_DOING": true
+  "SKIP_HOST_UPDATE": true,
+  "DANGEROUS_ENABLE_DEVTOOLS_ONLY_ENABLE_IF_YOU_KNOW_WHAT_YOURE_DOING": true,
+  "IS_MAXIMIZED": false,
+  "IS_MINIMIZED": false,
+  "WINDOW_BOUNDS": {
+    "x": 23,
+    "y": 23,
+    "width": 929,
+    "height": 1034
+  },
+  "MINIMIZE_TO_TRAY": false,
+  "OPEN_ON_STARTUP": false
 }
