--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor = , preferred, auto, auto
+monitor = DVI-D-1, preferred, 0x0, auto
+monitor = HDMI-A-1, preferred, 1920x0, auto
+monitor = DP-1, preferred, -1920x0, auto
 
 # Fix slow app startup (particually firefox at the moment)
 exec-once = dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
