--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,21 @@
 {
-    "editor.formatOnSave": true,
-    "editor.formatOnPaste": true,
-    "editor.tabSize": 4,
-    "editor.insertSpaces": true,
-    "editor.detectIndentation": false,
-    "files.insertFinalNewline": true,
-    "files.trimTrailingWhitespace": true,
-    "editor.semanticHighlighting.enabled": true,
-    "files.eol": "\n"
+  "editor.formatOnSave": true,
+  "editor.formatOnPaste": true,
+  "editor.tabSize": 4,
+  "editor.insertSpaces": true,
+  "editor.detectIndentation": false,
+  "files.insertFinalNewline": true,
+  "files.trimTrailingWhitespace": true,
+  "editor.semanticHighlighting.enabled": true,
+  "files.eol": "\n",
+  "cSpell.words": [
+    "Alacritty",
+    "ASDXC",
+    "Distro",
+    "Hyprland",
+    "Nixos",
+    "Vesktop",
+    "Waybar",
+    "Wofi"
+]
 }
