--- a/.editorconfig
+++ b/.editorconfig
@@ -4,6 +4,8 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 indent_style = space
+charset = utf-8
+trim_trailing_whitespace = true
 
 [*.nix]
 indent_size = 2
